--- a/output.html
+++ b/output.html
@@ -93,7 +93,7 @@ const lstate = (initialState) => {
     background-color: black;
     color: white;
 }
-.class-compListItem-blue-text {color:purple;} .tag-compRoot-div {color:red;} .class-compRoot-blue-text {color:blue;} </style>
+.class-compListItem-blue-text {color:purple;} .id-compRoot-bl {font-size:30px;} .tag-compRoot-div {color:red;} .class-compRoot-blue-text {color:blue;} </style>
 <script>
     let __Root_1_text = state("");
 
@@ -117,7 +117,7 @@ const lstate = (initialState) => {
 
 
 
-<marquee class="class-compRoot-blue-text">
+<marquee id="bl" class="blue-text id-compRoot-bl class-compRoot-blue-text">
     TODOOOOOOOO LIIIIISSSTTTTTT	
 </marquee>
 
@@ -222,7 +222,7 @@ const __textNode20 = document.createTextNode(`
     `);
 __elem17.appendChild(__textNode20);
 const __elem21 = document.createElement("span");
-__elem21.className = "class-compListItem-blue-text";
+__elem21.className = "blue-text class-compListItem-blue-text";
 const __22update_attr = (val) => __elem21.setAttribute("style", val);
 
         (b).subscribe(() => (__22update_attr)(((b).value) ? "text-decoration: line-through;" : ""));
@@ -311,7 +311,7 @@ const __textNode20 = document.createTextNode(`
     `);
 __elem17.appendChild(__textNode20);
 const __elem21 = document.createElement("span");
-__elem21.className = "class-compListItem-blue-text";
+__elem21.className = "blue-text class-compListItem-blue-text";
 const __22update_attr = (val) => __elem21.setAttribute("style", val);
 
         (b).subscribe(() => (__22update_attr)(((b).value) ? "text-decoration: line-through;" : ""));
